--- a/.github/workflows/publish-create-branch.yaml
+++ b/.github/workflows/publish-create-branch.yaml
@@ -120,10 +120,17 @@ jobs:
           echo "Please trigger the publish-release workflow with branch name: $MAJOR_BRANCH_NAME and version: $VERSION"
 
   # 第一步：构建不同架构的安装包
-  build-linux-amd64:
+  build-linux:
     needs: create-release-branch
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runner }}
     timeout-minutes: 60
+    strategy:
+      matrix:
+        include:
+          - arch: amd64
+            runner: ubuntu-latest
+          - arch: arm64
+            runner: ubuntu-24.04-arm
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -144,55 +151,17 @@ jobs:
           cd $SUBMODULE_PATH
           echo "Current commit: $(git rev-parse HEAD)"
 
-      - name: Build Linux AMD64 package
+      - name: Build Linux ${{ matrix.arch }} package
         run: |
           VERSION="${{ github.event.inputs.version }}"
           make dist
           ls -la dist/
 
-      - name: Upload Linux AMD64 artifacts
+      - name: Upload Linux ${{ matrix.arch }} artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: loongcollector-${{ github.event.inputs.version }}.linux-amd64.tar.gz
-          path: dist/loongcollector-${{ github.event.inputs.version }}.linux-amd64.tar.gz
-          retention-days: 1
-
-  build-linux-arm64:
-    needs: create-release-branch
-    runs-on: ubuntu-24.04-arm
-    timeout-minutes: 60
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ needs.create-release-branch.outputs.branch_name }}
-
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
-      - name: Set custom submodule URL and fetch
-        run: |
-          SUBMODULE_PATH="core/_thirdparty/coolbpf"
-          git config submodule.$SUBMODULE_PATH.url "https://github.com/aliyun/coolbpf.git"
-          git submodule update --init
-          cd $SUBMODULE_PATH
-          echo "Current commit: $(git rev-parse HEAD)"
-
-      - name: Build Linux ARM64 package
-        run: |
-          VERSION="${{ github.event.inputs.version }}"
-          # 在原生 ARM64 环境中直接构建
-          make dist
-          ls -la dist/
-
-      - name: Upload Linux ARM64 artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: loongcollector-${{ github.event.inputs.version }}.linux-arm64.tar.gz
-          path: dist/loongcollector-${{ github.event.inputs.version }}.linux-arm64.tar.gz
+          name: loongcollector-${{ github.event.inputs.version }}.linux-${{ matrix.arch }}.tar.gz
+          path: dist/loongcollector-${{ github.event.inputs.version }}.linux-${{ matrix.arch }}.tar.gz
           retention-days: 1
 
   build-windows:
@@ -233,9 +202,11 @@ jobs:
 
   # 第二步：合并包并上传
   upload-packages:
-    needs: [build-linux-amd64, build-linux-arm64, build-windows]
+    needs: [build-linux, build-windows]
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    permissions:
+      packages: write
     env:
       OSS_ACCESS_KEY_ID: ${{ secrets.OSS_ACCESS_KEY_ID }}
       OSS_ACCESS_KEY_SECRET: ${{ secrets.OSS_ACCESS_KEY_SECRET }}
@@ -291,12 +262,38 @@ jobs:
           username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Upload packages to OSS
         run: |
           VERSION="${{ github.event.inputs.version }}"
           chmod +x scripts/upload_release_assets.sh
           ./scripts/upload_release_assets.sh package $VERSION
           ./scripts/upload_release_assets.sh image $VERSION
+
+      - name: Build and push Docker images to GitHub Container Registry
+        run: |
+          VERSION="${{ github.event.inputs.version }}"
+          REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          
+          # 构建并推送多架构镜像到 GitHub Container Registry
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            --tag ghcr.io/$REPO_OWNER/loongcollector:$VERSION \
+            --tag ghcr.io/$REPO_OWNER/loongcollector:latest \
+            --file ./docker/Dockerfile_release \
+            --push \
+            --build-arg VERSION=$VERSION \
+            .
+          
+          echo "Docker images pushed to GitHub Container Registry:"
+          echo "- ghcr.io/$REPO_OWNER/loongcollector:$VERSION"
+          echo "- ghcr.io/$REPO_OWNER/loongcollector:latest"
 
   # 第三步：测试链接和产物
   test-release:
