--- a/.github/workflows/publish-create-branch.yaml
+++ b/.github/workflows/publish-create-branch.yaml
@@ -27,6 +27,21 @@ on:
         required: true
         type: string
         pattern: '^[0-9]+$'
+      build_linux_amd64:
+        description: 'Build Linux AMD64 package'
+        required: false
+        type: boolean
+        default: true
+      build_linux_arm64:
+        description: 'Build Linux ARM64 package'
+        required: false
+        type: boolean
+        default: true
+      build_windows:
+        description: 'Build Windows package'
+        required: false
+        type: boolean
+        default: true
 
 env:
   GO_VERSION: 1.19.10
@@ -124,6 +139,9 @@ jobs:
     needs: create-release-branch
     runs-on: ${{ matrix.runner }}
     timeout-minutes: 60
+    if: |
+      (matrix.arch == 'amd64' && github.event.inputs.build_linux_amd64 == 'true') ||
+      (matrix.arch == 'arm64' && github.event.inputs.build_linux_arm64 == 'true')
     strategy:
       matrix:
         include:
@@ -168,6 +186,7 @@ jobs:
     needs: create-release-branch
     runs-on: ${{ matrix.runner }}
     timeout-minutes: 60
+    if: github.event.inputs.build_windows == 'true'
     strategy:
       matrix:
         runner: [Windows]
@@ -202,11 +221,14 @@ jobs:
 
   # 第二步：合并包并上传
   upload-packages:
-    needs: [build-linux, build-windows]
+    needs: [create-release-branch, build-linux, build-windows]
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    permissions:
-      packages: write
+    if: |
+      always() &&
+      (needs.create-release-branch.result == 'success') &&
+      (needs.build-linux.result == 'success' || needs.build-linux.result == 'skipped') &&
+      (needs.build-windows.result == 'success' || needs.build-windows.result == 'skipped')
     env:
       OSS_ACCESS_KEY_ID: ${{ secrets.OSS_ACCESS_KEY_ID }}
       OSS_ACCESS_KEY_SECRET: ${{ secrets.OSS_ACCESS_KEY_SECRET }}
@@ -218,22 +240,30 @@ jobs:
           ref: ${{ needs.create-release-branch.outputs.branch_name }}
 
       - name: Download Linux AMD64 artifacts
+        if: github.event.inputs.build_linux_amd64 == 'true'
         uses: actions/download-artifact@v4
         with:
           name: loongcollector-${{ github.event.inputs.version }}.linux-amd64.tar.gz
           path: temp-amd64/
 
       - name: Download Linux ARM64 artifacts
+        if: github.event.inputs.build_linux_arm64 == 'true'
         uses: actions/download-artifact@v4
         with:
           name: loongcollector-${{ github.event.inputs.version }}.linux-arm64.tar.gz
           path: temp-arm64/
 
       - name: Download Windows artifacts
+        if: github.event.inputs.build_windows == 'true'
         uses: actions/download-artifact@v4
         with:
           name: loongcollector-${{ github.event.inputs.version }}.windows-amd64.zip
           path: temp-windows/
+
+      - name: List downloaded artifacts
+        run: |
+          echo "Available artifacts:"
+          ls -la temp-amd64/ temp-arm64/ temp-windows/ || true
 
       - name: Merge artifacts and generate SHA256
         run: |
@@ -297,7 +327,11 @@ jobs:
 
   # 第三步：测试链接和产物
   test-release:
-    needs: upload-packages
+    needs: [create-release-branch, upload-packages]
+    if: |
+      always() &&
+      (needs.create-release-branch.result == 'success') &&
+      (needs.upload-packages.result == 'success' || needs.upload-packages.result == 'skipped')
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -347,19 +381,42 @@ jobs:
           done
           
           # 测试下载链接
-          LINUX_AMD64_URL="https://loongcollector-community-edition.oss-cn-shanghai.aliyuncs.com/${VERSION}/loongcollector-${VERSION}.linux-amd64.tar.gz"
-          LINUX_ARM64_URL="https://loongcollector-community-edition.oss-cn-shanghai.aliyuncs.com/${VERSION}/loongcollector-${VERSION}.linux-arm64.tar.gz"
-          WINDOWS_URL="https://loongcollector-community-edition.oss-cn-shanghai.aliyuncs.com/${VERSION}/loongcollector-${VERSION}.windows-amd64.zip"
-          
           echo "Testing download URLs..."
-          for url in "$LINUX_AMD64_URL" "$LINUX_ARM64_URL" "$WINDOWS_URL"; do
-            echo "Testing download URL: $url"
-            if curl -f -s -I "$url" | grep -q "200 OK"; then
-              echo "✓ Download URL accessible: $url"
+          
+          # 测试 Linux AMD64
+          if [[ "${{ github.event.inputs.build_linux_amd64 }}" == "true" ]]; then
+            LINUX_AMD64_URL="https://loongcollector-community-edition.oss-cn-shanghai.aliyuncs.com/${VERSION}/loongcollector-${VERSION}.linux-amd64.tar.gz"
+            echo "Testing Linux AMD64 download URL: $LINUX_AMD64_URL"
+            if curl -f -s -I "$LINUX_AMD64_URL" | grep -q "200 OK"; then
+              echo "✓ Linux AMD64 download URL accessible"
             else
-              echo "✗ Download URL failed: $url"
+              echo "✗ Linux AMD64 download URL failed"
               exit 1
             fi
-          done
+          fi
+          
+          # 测试 Linux ARM64
+          if [[ "${{ github.event.inputs.build_linux_arm64 }}" == "true" ]]; then
+            LINUX_ARM64_URL="https://loongcollector-community-edition.oss-cn-shanghai.aliyuncs.com/${VERSION}/loongcollector-${VERSION}.linux-arm64.tar.gz"
+            echo "Testing Linux ARM64 download URL: $LINUX_ARM64_URL"
+            if curl -f -s -I "$LINUX_ARM64_URL" | grep -q "200 OK"; then
+              echo "✓ Linux ARM64 download URL accessible"
+            else
+              echo "✗ Linux ARM64 download URL failed"
+              exit 1
+            fi
+          fi
+          
+          # 测试 Windows
+          if [[ "${{ github.event.inputs.build_windows }}" == "true" ]]; then
+            WINDOWS_URL="https://loongcollector-community-edition.oss-cn-shanghai.aliyuncs.com/${VERSION}/loongcollector-${VERSION}.windows-amd64.zip"
+            echo "Testing Windows download URL: $WINDOWS_URL"
+            if curl -f -s -I "$WINDOWS_URL" | grep -q "200 OK"; then
+              echo "✓ Windows download URL accessible"
+            else
+              echo "✗ Windows download URL failed"
+              exit 1
+            fi
+          fi
           
           echo "All tests passed!" 
