--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -103,48 +103,17 @@ jobs:
           
           # 如果有比较链接，添加到 release notes 中
           if [ -n "$COMPARE_URL" ]; then
-            RELEASE_NOTES="$RELEASE_NOTES
-
-## Changes since $PREVIOUS_TAG
-
-See [full changelog]($COMPARE_URL) for all changes since $PREVIOUS_TAG."
+            COMPARE_SECTION="\n\n## Changes since $PREVIOUS_TAG\n\nSee [full changelog]($COMPARE_URL) for all changes since $PREVIOUS_TAG."
+            RELEASE_NOTES="$RELEASE_NOTES$COMPARE_SECTION"
           fi
           
           # 添加 Docker 镜像信息
           REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          RELEASE_NOTES="$RELEASE_NOTES
-
-## Docker Images
-
-This release includes Docker images for multiple architectures:
-
-### GitHub Container Registry (ghcr.io)
-
-\`bash
-# Pull the latest version
-docker pull ghcr.io/\$REPO_OWNER/loongcollector:latest
-
-# Pull a specific version
-docker pull ghcr.io/\$REPO_OWNER/loongcollector:\$VERSION
-
-# Run the container
-docker run -d --name loongcollector ghcr.io/\$REPO_OWNER/loongcollector:\$VERSION
-\`
-
-**Supported architectures:**
-- linux/amd64
-- linux/arm64
-
-### Alibaba Cloud Container Registry
-
-\`bash
-# Pull from Alibaba Cloud Container Registry
-docker pull sls-opensource-registry.cn-shanghai.cr.aliyuncs.com/ilogtail/loongcollector:\$VERSION
-\`
-
-**Supported architectures:**
-- linux/amd64
-- linux/arm64"
+          
+          # 构建 Docker 镜像信息
+          DOCKER_INFO="\n\n## Docker Images\n\nThis release includes Docker images for multiple architectures:\n\n### GitHub Container Registry (ghcr.io)\n\n\`\`\`bash\n# Pull the latest version\ndocker pull ghcr.io/\$REPO_OWNER/loongcollector:latest\n\n# Pull a specific version\ndocker pull ghcr.io/\$REPO_OWNER/loongcollector:\$VERSION\n\n# Run the container\ndocker run -d --name loongcollector ghcr.io/\$REPO_OWNER/loongcollector:\$VERSION\n\`\`\`\n\n**Supported architectures:**\n- linux/amd64\n- linux/arm64\n\n### Alibaba Cloud Container Registry\n\n\`\`\`bash\n# Pull from Alibaba Cloud Container Registry\ndocker pull sls-opensource-registry.cn-shanghai.cr.aliyuncs.com/ilogtail/loongcollector:\$VERSION\n\`\`\`\n\n**Supported architectures:**\n- linux/amd64\n- linux/arm64"
+          
+          RELEASE_NOTES="$RELEASE_NOTES$DOCKER_INFO"
           
           # 保存到文件
           echo "$RELEASE_NOTES" > release_notes.md
