--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Create Release Branch
+name: Auto Release
 
 on:
   workflow_dispatch:
@@ -47,6 +47,11 @@ on:
         required: false
         type: boolean
         default: false
+      create_release:
+        description: 'Create GitHub Release after building and uploading'
+        required: false
+        type: boolean
+        default: true
 
 env:
   GO_VERSION: 1.19.10
@@ -541,8 +546,156 @@ jobs:
           
           echo "All tests passed!" 
 
+  # 第六步：创建 GitHub Release
+  create-release:
+    needs: [create-release-branch, upload-to-oss, upload-images, test-release]
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    if: |
+      always() &&
+      (needs.create-release-branch.result == 'success') &&
+      (needs.upload-to-oss.result == 'success' || needs.upload-to-oss.result == 'skipped') &&
+      (needs.upload-images.result == 'success' || needs.upload-images.result == 'skipped') &&
+      (needs.test-release.result == 'success' || needs.test-release.result == 'skipped') &&
+      github.event.inputs.create_release == 'true'
+    permissions:
+      contents: write
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.create-release-branch.outputs.branch_name }}
+          fetch-depth: 0
+
+      - name: Configure Git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Set version
+        run: |
+          VERSION="${{ github.event.inputs.version }}"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "Using version: $VERSION"
+
+      - name: Create and push tag
+        run: |
+          VERSION="${{ github.event.inputs.version }}"
+          TAG_NAME="v$VERSION"
+          
+          # 检查标签是否已存在
+          if git tag -l | grep -q "^$TAG_NAME$"; then
+            echo "Tag $TAG_NAME already exists. Deleting it..."
+            git tag -d "$TAG_NAME"
+            git push origin ":refs/tags/$TAG_NAME" || true
+          fi
+          
+          # 创建新标签
+          echo "Creating tag $TAG_NAME..."
+          git tag -a "$TAG_NAME" -m "Release $TAG_NAME"
+          git push origin "$TAG_NAME"
+          
+          echo "Tag $TAG_NAME created and pushed successfully"
+
+      - name: Generate release notes
+        run: |
+          VERSION="${{ github.event.inputs.version }}"
+          
+          # 检查 release notes 文件是否存在
+          if [ ! -f "changes/v${VERSION}.md" ]; then
+            echo "Error: Release notes file changes/v${VERSION}.md not found"
+            exit 1
+          fi
+          
+          # 获取上一个 release tag
+          PREVIOUS_TAG=$(git describe --tags --abbrev=0 --match "v*" HEAD~1 2>/dev/null || echo "")
+          
+          if [ -n "$PREVIOUS_TAG" ]; then
+            echo "Previous tag found: $PREVIOUS_TAG"
+            # 生成比较链接
+            COMPARE_URL="https://github.com/${{ github.repository }}/compare/${PREVIOUS_TAG}...v${VERSION}"
+            echo "Compare URL: $COMPARE_URL"
+          else
+            echo "No previous tag found, this appears to be the first release"
+            COMPARE_URL=""
+          fi
+          
+          # 读取 release notes 内容
+          RELEASE_NOTES=$(cat "changes/v${VERSION}.md")
+          
+          # 如果有比较链接，添加到 release notes 中
+          if [ -n "$COMPARE_URL" ]; then
+            COMPARE_SECTION="\n\n## Changes since $PREVIOUS_TAG\n\nSee [full changelog]($COMPARE_URL) for all changes since $PREVIOUS_TAG."
+            RELEASE_NOTES="$RELEASE_NOTES$COMPARE_SECTION"
+          fi
+          
+          # 添加 Docker 镜像信息
+          REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          
+          # 构建 Docker 镜像信息
+          DOCKER_INFO="\n\n## Docker Images\n\nThis release includes Docker images for multiple architectures:\n\n### GitHub Container Registry (ghcr.io)\n\n\`\`\`bash\n# Pull the latest version\ndocker pull ghcr.io/\$REPO_OWNER/loongcollector:latest\n\n# Pull a specific version\ndocker pull ghcr.io/\$REPO_OWNER/loongcollector:\$VERSION\n\n# Run the container\ndocker run -d --name loongcollector ghcr.io/\$REPO_OWNER/loongcollector:\$VERSION\n\`\`\`\n\n**Supported architectures:**\n- linux/amd64\n- linux/arm64\n\n### Alibaba Cloud Container Registry\n\n\`\`\`bash\n# Pull from Alibaba Cloud Container Registry\ndocker pull sls-opensource-registry.cn-shanghai.cr.aliyuncs.com/ilogtail/loongcollector:\$VERSION\n\`\`\`\n\n**Supported architectures:**\n- linux/amd64\n- linux/arm64"
+          
+          RELEASE_NOTES="$RELEASE_NOTES$DOCKER_INFO"
+          
+          # 保存到文件
+          echo "$RELEASE_NOTES" > release_notes.md
+          echo "Release notes generated successfully"
+
+      - name: Download build artifacts from current workflow
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-packages
+          path: dist/
+
+      - name: List downloaded artifacts
+        run: |
+          echo "Downloaded artifacts from current workflow:"
+          ls -la dist/ || echo "No artifacts found in dist/ directory"
+
+      - name: Check available artifacts
+        run: |
+          echo "Checking available artifacts in dist/ directory:"
+          ls -la dist/ || echo "No artifacts found in dist/ directory"
+          
+          if [ ! "$(ls -A dist/ 2>/dev/null)" ]; then
+            echo "No artifacts found. The release will be created without files."
+            echo "Make sure the build artifacts have been generated by the previous steps."
+          else
+            echo "Found artifacts:"
+            ls -la dist/
+          fi
+
+      - name: Create GitHub Release
+        run: |
+          VERSION="${{ env.VERSION }}"
+          
+          # 检查是否有可用的 artifacts
+          if [ "$(ls -A dist/ 2>/dev/null)" ]; then
+            echo "Found artifacts, creating release with files..."
+            gh release create "v$VERSION" \
+              --title "Release v$VERSION" \
+              --notes-file release_notes.md \
+              --draft false \
+              --prerelease false \
+              dist/*.tar.gz dist/*.zip dist/*.sha256 2>/dev/null || true
+          else
+            echo "No artifacts found, creating release without files..."
+            gh release create "v$VERSION" \
+              --title "Release v$VERSION" \
+              --notes-file release_notes.md \
+              --draft false \
+              --prerelease false
+          fi
+
+      - name: Output release info
+        run: |
+          echo "Release v${{ env.VERSION }} has been published successfully!"
+          echo "Release URL: https://github.com/${{ github.repository }}/releases/tag/v${{ env.VERSION }}"
+          echo "Branch: ${{ needs.create-release-branch.outputs.branch_name }}"
+          echo "Version: ${{ env.VERSION }}"
+
   actions-timeline:
-    needs: [test-release]
+    needs: [test-release, create-release]
     runs-on: ubuntu-latest
     permissions:
       actions: read
