--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -428,6 +428,17 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Download build artifacts for Docker build
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-packages
+          path: dist/
+
+      - name: List artifacts for Docker build
+        run: |
+          echo "Artifacts available for Docker build:"
+          ls -la dist/ || echo "No artifacts found"
+
       - name: Build and push Docker images to both registries
         run: |
           VERSION="${{ github.event.inputs.version }}"
@@ -435,8 +446,38 @@ jobs:
           
           echo "Building and pushing Docker images for version $VERSION to both registries"
           
+          # 检查是否有Linux构建产物
+          LINUX_AMD64_FILE="dist/loongcollector-$VERSION.linux-amd64.tar.gz"
+          LINUX_ARM64_FILE="dist/loongcollector-$VERSION.linux-arm64.tar.gz"
+          
+          if [ ! -f "$LINUX_AMD64_FILE" ] && [ ! -f "$LINUX_ARM64_FILE" ]; then
+            echo "Error: No Linux packages found for Docker build"
+            echo "Available files in dist/:"
+            ls -la dist/ || echo "dist/ directory is empty"
+            echo "Expected files:"
+            echo "- $LINUX_AMD64_FILE"
+            echo "- $LINUX_ARM64_FILE"
+            exit 1
+          fi
+          
+          # 确定要构建的平台
+          PLATFORMS=""
+          if [ -f "$LINUX_AMD64_FILE" ]; then
+            PLATFORMS="$PLATFORMS linux/amd64"
+            echo "Found Linux AMD64 package: $LINUX_AMD64_FILE"
+          fi
+          if [ -f "$LINUX_ARM64_FILE" ]; then
+            PLATFORMS="$PLATFORMS linux/arm64"
+            echo "Found Linux ARM64 package: $LINUX_ARM64_FILE"
+          fi
+          
+          # 移除开头的空格
+          PLATFORMS=$(echo $PLATFORMS | sed 's/^ *//')
+          
+          echo "Building Docker images for platforms: $PLATFORMS"
+          
           # 构建并推送多架构镜像到两个仓库
-          docker buildx build --platform linux/amd64,linux/arm64 \
+          docker buildx build --platform $PLATFORMS \
             --file docker/Dockerfile_release \
             --build-arg VERSION=$VERSION \
             --build-arg HOST_OS=Linux \
