--- a/docker/Dockerfile_release
+++ b/docker/Dockerfile_release
@@ -16,7 +16,8 @@ FROM --platform=$TARGETPLATFORM ubuntu:25.10 AS build
 ARG VERSION=0.0.1
 ARG TARGETPLATFORM
 WORKDIR /usr/local
-COPY dist/loongcollector-${VERSION}.linux-*.tar.gz .
+# Copy the specific architecture package
+COPY dist/loongcollector-${VERSION}.linux-${TARGETPLATFORM##*/}.tar.gz .
 RUN tar -xzf loongcollector-${VERSION}.linux-${TARGETPLATFORM##*/}.tar.gz
 
 FROM ubuntu:25.10
