feat: Enhance Kafka configuration in flusher_kafka_cpp_static tests

--- a/test/e2e/test_cases/flusher_kafka_cpp_static/docker-compose.yaml
+++ b/test/e2e/test_cases/flusher_kafka_cpp_static/docker-compose.yaml
@@ -51,6 +51,8 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:29092,EXTERNAL://localhost:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_MESSAGE_MAX_BYTES: '5242880'
+      KAFKA_REPLICA_FETCH_MAX_BYTES: '6291456'
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
       KAFKA_DEFAULT_REPLICATION_FACTOR: 1
