--- a/docker/Dockerfile_release
+++ b/docker/Dockerfile_release
@@ -20,7 +20,7 @@ WORKDIR /usr/local
 COPY dist/loongcollector-${VERSION}.linux-${TARGETPLATFORM##*/}.tar.gz .
 RUN tar -xzf loongcollector-${VERSION}.linux-${TARGETPLATFORM##*/}.tar.gz
 
-FROM ubuntu:25.10
+FROM ubuntu:25.10 AS release
 
 ENV container=docker
 
