Introduced new unit tests for configuration management in security managers, ensuring robust handling of different config scenarios.
Change-Id: I5376dd6dbae736758b750e49b9d6cc5db4014246

--- a/core/unittest/ebpf/CMakeLists.txt
+++ b/core/unittest/ebpf/CMakeLists.txt
@@ -53,6 +53,10 @@ add_unittest(process_exit_retryable_event_unittest ProcessExitRetryableEventUnit
 add_unittest(process_sync_retryable_event_unittest ProcessSyncRetryableEventUnittest.cpp)
 add_unittest(file_retryable_event_unittest FileRetryableEventUnittest.cpp)
 add_unittest(file_security_manager_unittest FileSecurityManagerUnittest.cpp)
+add_unittest(file_security_manager_config_pair_unittest FileSecurityManagerConfigPairUnittest.cpp)
+add_unittest(process_security_manager_config_pair_unittest ProcessSecurityManagerConfigPairUnittest.cpp)
+add_unittest(network_security_manager_config_pair_unittest NetworkSecurityManagerConfigPairUnittest.cpp)
+add_unittest(network_observer_manager_config_pair_unittest NetworkObserverManagerConfigPairUnittest.cpp)
 add_unittest(retryable_event_unittest RetryableEventUnittest.cpp)
 add_unittest(http_retryable_event_unittest HttpRetryableEventUnittest.cpp)
 
