fix: correct spelling of "canceled" in KafkaSubscriber context handling
feat: add Dockerfile for Kerberos dependencies and update compose configuration

feat: simplify Dockerfile by using bash base image

feat: update Dockerfile and docker-compose for Kerberos support and runtime dependencies

feat: update Kerberos configuration in test cases and Dockerfile for improved compatibility

--- a/test/e2e/test_cases/flusher_kafka_native_kerberos/Dockerfile
+++ b/test/e2e/test_cases/flusher_kafka_native_kerberos/Dockerfile
@@ -1,11 +1,6 @@
 # Copyright 2025 iLogtail Authors
 
-FROM ubuntu:20.04
-
-RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y \
-      bash \
-    && rm -rf /var/lib/apt/lists/*
+FROM bash
 
 COPY run.sh /run.sh
 RUN chmod 755 /run.sh
