fix ut compile error

--- a/core/unittest/CMakeLists.txt
+++ b/core/unittest/CMakeLists.txt
@@ -88,6 +88,7 @@ macro(ut_link ut_link_withspl)
     common_link(${UT_BASE_TARGET})
     target_link_libraries(${UT_BASE_TARGET} provider_unittest_base)
     if (LINUX)
+        link_systemd_journal(${UT_BASE_TARGET})
         add_dependencies(${UT_BASE_TARGET} install_coolbpf)
     endif()
 endmacro()
