--- a/core/unittest/CMakeLists.txt
+++ b/core/unittest/CMakeLists.txt
@@ -66,6 +66,7 @@ macro(add_core_subdir)
         add_subdirectory(host_monitor)
         add_subdirectory(forward)
         add_subdirectory(prometheus)
+        add_subdirectory(journal_server)
         if (ENABLE_ENTERPRISE)
             add_subdirectory(shennong)
         endif()
