enhance: improve span serialize and deserialize performance
Change-Id: I37e88c5231c3d3f26519c46f4f28a06961331b95
Co-developed-by: Cursor <noreply@cursor.com>

--- a/core/unittest/CMakeLists.txt
+++ b/core/unittest/CMakeLists.txt
@@ -57,6 +57,7 @@ macro(add_core_subdir)
     add_subdirectory(plugin)
     add_subdirectory(polling)
     add_subdirectory(processor)
+    add_subdirectory(protobuf)
     add_subdirectory(provider)
     add_subdirectory(queue)
     add_subdirectory(reader)
