fix: cannot create reader for soft link files
Change-Id: Ia6d5a0f8ae30dd5cbb0c8c7af52d487cbe4afb31
Co-developed-by: Cursor <noreply@cursor.com>

--- a/core/unittest/event_handler/CMakeLists.txt
+++ b/core/unittest/event_handler/CMakeLists.txt
@@ -24,7 +24,11 @@ target_link_libraries(modify_handler_unittest ${UT_BASE_TARGET})
 add_executable(log_input_unittest LogInputUnittest.cpp)
 target_link_libraries(log_input_unittest ${UT_BASE_TARGET})
 
+add_executable(log_input_reader_unittest LogInputReaderUnittest.cpp)
+target_link_libraries(log_input_reader_unittest ${UT_BASE_TARGET})
+
 include(GoogleTest)
 gtest_discover_tests(create_modify_handler_unittest)
 gtest_discover_tests(modify_handler_unittest)
 gtest_discover_tests(log_input_unittest)
+gtest_discover_tests(log_input_reader_unittest)
