feat: add ProcessorTimestampFilterNative and related unit tests
- Introduced ProcessorTimestampFilterNative to filter events based on timestamp ranges.
- Updated CMakeLists.txt to include unit tests for the new processor.
- Enhanced documentation to include the new processor in the overview and summary sections.

Change-Id: I1234567890abcdef1234567890abcdef12345678
Co-developed-by: Cursor <noreply@cursor.com>

--- a/core/unittest/processor/CMakeLists.txt
+++ b/core/unittest/processor/CMakeLists.txt
@@ -30,6 +30,9 @@ target_link_libraries(processor_parse_json_native_unittest ${UT_BASE_TARGET})
 add_executable(processor_parse_timestamp_native_unittest ProcessorParseTimestampNativeUnittest.cpp)
 target_link_libraries(processor_parse_timestamp_native_unittest ${UT_BASE_TARGET})
 
+add_executable(processor_timestamp_filter_native_unittest ProcessorTimestampFilterNativeUnittest.cpp)
+target_link_libraries(processor_timestamp_filter_native_unittest ${UT_BASE_TARGET})
+
 add_executable(processor_tag_native_unittest ProcessorTagNativeUnittest.cpp)
 target_link_libraries(processor_tag_native_unittest ${UT_BASE_TARGET})
 
@@ -80,6 +83,7 @@ gtest_discover_tests(processor_split_multiline_log_string_native_unittest)
 gtest_discover_tests(processor_parse_regex_native_unittest)
 gtest_discover_tests(processor_parse_json_native_unittest)
 gtest_discover_tests(processor_parse_timestamp_native_unittest)
+gtest_discover_tests(processor_timestamp_filter_native_unittest)
 gtest_discover_tests(processor_tag_native_unittest)
 gtest_discover_tests(processor_parse_apsara_native_unittest)
 gtest_discover_tests(processor_parse_delimiter_native_unittest)
