upgrade go to 1.23.12 and upgrade go version

--- a/docker/Dockerfile.e2e-test
+++ b/docker/Dockerfile.e2e-test
@@ -1,4 +1,4 @@
-FROM golang:1.19.10
+FROM sls-opensource-registry.cn-shanghai.cr.aliyuncs.com/common/golang:1.23.12
 
 RUN mkdir -p /tmp/loongcollector
 
