--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -119,10 +119,10 @@ jobs:
       fail-fast: false
     timeout-minutes: 60
     steps:
-      - name: Set up Go 1.19
+      - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.19
+          go-version: 1.23.12
 
       - name: Check out code
         uses: actions/checkout@v4
